Fix dark theme pagenum background color overlap

--- a/share/static/css/elevator-dark/main.css
+++ b/share/static/css/elevator-dark/main.css
@@ -377,3 +377,7 @@
     margin-bottom: 1px;
     line-height: 24px;
 }
+
+.darkmode div.paging span.pagenum span.currentpage, .darkmode div.paging span.pagenum a {
+    background-color: transparent !important;
+}
